# DemandProject

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  1  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Manohar_Chidambaram_Resume_McKesson_Sr_Director_Data_Engineering.md  Manohar_Chidambaram_Resume_VP_DataScience_AI.md  McKesson_Interview_Call_Playbook.md  Prompts.md  README.md  RESET_RELOAD_2026_06.md  VP_DataScience_AI_Interview_Call_Playbook.md  docker-compose.yml  pyproject.toml
mvp/demand/: .coverage  .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
mvp/demand/api/: auth.py  core.py  main.py
mvp/demand/api/config/: model_competition.yaml
mvp/demand/api/routers/: accuracy.py  ai_planner.py  analysis.py  benchmark.py  bias_corrections.py  blended_forecast.py  chat.py  clusters.py  collaboration.py  competition.py  config_manager.py  consensus_plan.py  control_tower.py  dashboard.py  data_quality.py  domains.py  echelon_planning.py  events.py  external_signals.py  fill_rate.py  financial_plan.py  intel.py  inv_backtest.py  inv_planning.py  inv_planning_abc_xyz.py  inv_planning_demand_signals.py  inv_planning_eoq.py  inv_planning_exceptions.py  inv_planning_health.py  inv_planning_insights.py  inv_planning_intramonth.py  inv_planning_investment.py  inv_planning_lead_time.py  inv_planning_policy.py  inv_planning_projection.py  inv_planning_replenishment.py  inv_planning_safety_stock.py  inv_planning_simulation.py  inv_planning_supplier.py  inv_planning_variability.py  (+12 more)
mvp/demand/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mvp/demand/catboost_info/learn/: events.out.tfevents
mvp/demand/common/: ai_planner.py  auth.py  backtest_framework.py  cache.py  champion_strategies.py  constants.py  db.py  domain_specs.py  dq_engine.py  exception_engine.py  feature_engineering.py  forecast_ci.py  job_registry.py  job_state.py  medallion.py  metrics.py  mlflow_utils.py  notification_engine.py  planning_date.py  query_tracker.py  rate_limiter.py  shap_selector.py  sql_helpers.py  tuning.py  utils.py  webhook_dispatcher.py
mvp/demand/config/: algorithm_config.yaml  api_governance_config.yaml  bias_correction_config.yaml  cache_config.yaml  clustering_config.yaml  consensus_config.yaml  data_quality_config.yaml  demand_signals_external_config.yaml  echelon_config.yaml  event_planning_config.yaml  exception_config.yaml  financial_plan_config.yaml  hyperparameter_tuning.yaml  lead_time_config.yaml  medallion_config.yaml  model_competition.yaml  notification_config.yaml  order_recommendation_config.yaml  planning_config.yaml  po_integration_config.yaml  procurement_config.yaml  production_forecast_config.yaml  quantile_forecast_config.yaml  replenishment_plan_config.yaml  reporting_config.yaml  safety_stock_config.yaml  service_level_config.yaml
mvp/demand/docs/: ARCHITECTURE.md  DATA_FLOW.md  OPERATIONS.md  README.md  RUNBOOK.md  WORKFLOW.md  product_summary.md
mvp/demand/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
mvp/demand/frontend/e2e/: playwright.config.ts
mvp/demand/frontend/playwright-report/: index.html
mvp/demand/frontend/src/: App.tsx  index.css  main.tsx
mvp/demand/scripts/: assign_replenishment_policies.py  clean_backtest_models.py  clean_forecasts_by_date.py  compute_bias_corrections.py  compute_blended_forecast.py  compute_demand_signals.py  compute_demand_variability.py  compute_echelon_targets.py  compute_eoq.py  compute_financial_plan.py  compute_inventory_projection.py  compute_investment_plan.py  compute_lead_time_variability.py  compute_safety_stock.py  compute_service_level_actuals.py  deepar_model.py  detect_seasonality.py  fix_dq_issues.py  generate_clustering_features.py  generate_consensus_plan.py  generate_embeddings.py  generate_planned_orders.py  generate_production_forecasts.py  generate_quantile_forecasts.py  generate_replenishment_exceptions.py  generate_storyboard_exceptions.py  label_clusters.py  load_backtest_forecasts.py  load_dataset_postgres.py  load_open_pos.py  normalize_dataset_csv.py  normalize_inventory_csv.py  patchtst_model.py  populate_dq_checks.py  refresh_health_scores.py  release_planned_orders.py  run_backtest.py  run_backtest_catboost.py  run_backtest_deepar.py  run_backtest_neuralprophet.py  (+16 more)
mvp/demand/sql/: 003_create_dim_customer.sql  004_create_dim_time.sql  005_create_dim_dfu.sql  006_create_fact_sales_monthly.sql  007_create_fact_external_forecast_monthly.sql  008_perf_indexes_and_agg.sql  009_create_chat_embeddings.sql  010_create_backtest_lag_archive.sql  011_create_accuracy_slice_views.sql  016_add_seasonality_to_accuracy_views.sql  017_create_fact_inventory_snapshot.sql  018_dashboard_views.sql  019_inventory_forecast_view.sql  020_create_job_history.sql  021_alter_job_history_scheduling.sql  028_create_fill_rate_monthly.sql  029_create_demand_signals.sql  030_create_ai_insights.sql  031_add_xyz_classification.sql  032_create_supplier_performance.sql  033_create_investment_plan.sql  035_create_control_tower_kpis.sql  036_create_ai_insights.sql  037_create_safety_stock_targets.sql  038_create_storyboard.sql  039_add_insight_snooze.sql  039_create_ai_call_log.sql  039_create_production_forecast.sql  041_add_source_model_id.sql  041_create_replenishment_plan.sql  043_create_open_purchase_orders.sql  045_create_inventory_projection.sql  047_create_demand_plan.sql  051_create_service_level_tracking.sql  052_create_lead_time_learning.sql  053_create_blended_forecast.sql  054_create_echelon_planning.sql  056_create_sop_module.sql  063_create_data_quality.sql  064_create_query_performance.sql  (+14 more)
mvp/demand/tests/: conftest.py
mvp/item/: .env.example  Makefile  docker-compose.yml  pyproject.toml
mvp/item/api/: main.py
mvp/item/docs/: README.md  RUNBOOK.md
mvp/item/scripts/: load_item_postgres.py  normalize_item_csv.py  spark_item_to_iceberg.py
mvp/item/sql/: 001_create_dim_item.sql  trino_item_queries.sql
(+28642 files in other folders)
