[project]
name = "demand-mvp"
version = "0.1.0"
description = "Unified demand MVP for multiple dimensions/facts"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary,pool]>=3.2.0",
  "python-dotenv>=1.0.1",
  "openai>=1.0.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "mlflow>=2.8.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pyyaml>=6.0.0",
  "lightgbm>=4.0.0",
  "catboost>=1.2.0",
  "xgboost>=2.0.0",
  "python-dateutil>=2.8.0",
  "apscheduler>=3.10",
  "optuna>=3.0",
  "shap>=0.43.0",
  "anthropic>=0.40.0",
  "python-multipart>=0.0.22",
  "pgeocode>=0.5.0",
  "bcrypt>=5.0.0",
  "pyjwt>=2.12.1",
  "statsmodels>=0.14.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0.0", "numba>=0.59.0"]
expert-panel = ["pmdarima>=2.0.0"]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "data/", "archive/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "RUF", "UP"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # function call in default argument (FastAPI Depends)
  "N806",   # variable in function should be lowercase (common in ML code)
  "N803",   # argument name should be lowercase (common in ML formulas)
  "RUF012", # mutable class variable — too noisy for dataclasses
]

[tool.ruff.lint.isort]
known-first-party = ["api", "common", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
exclude = ["data/", "archive/", ".venv/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["api", "common"]
omit = ["*/tests/*", "*/data/*", "*/archive/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__",
  "if TYPE_CHECKING",
]
