[project]
name = "demand-mvp"
version = "0.1.0"
description = "Unified demand MVP for multiple dimensions/facts"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "orjson>=3.10.0",
  "uvicorn>=0.30.0",
  "gunicorn>=23.0.0",
  "redis>=5.0.0",
  "pydantic>=2.8.0",
  "psycopg[binary,pool]>=3.2.0",
  "python-dotenv>=1.0.1",
  "openai>=1.0.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "mlflow>=2.8.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pyyaml>=6.0.0",
  "lightgbm>=4.0.0",
  "catboost>=1.2.0",
  "xgboost>=2.0.0",
  "python-dateutil>=2.8.0",
  "apscheduler>=3.10",
  "optuna>=3.0",
  "shap>=0.43.0",
  "anthropic>=0.40.0",
  "python-multipart>=0.0.22",
  "pgeocode>=0.5.0",
  "bcrypt>=5.0.0",
  "pyjwt>=2.12.1",
  "statsmodels>=0.14.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0.0", "numba>=0.59.0"]
expert-panel = ["pmdarima>=2.0.0"]
foundation = [
    "chronos-forecasting>=2.2.2",
]
dl = [
    "neuralforecast>=3.1.9",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "data/", "archive/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "RUF", "UP", "BLE"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # function call in default argument (FastAPI Depends)
  "N806",   # variable in function should be lowercase (common in ML code)
  "N803",   # argument name should be lowercase (common in ML formulas)
  "RUF012", # mutable class variable — too noisy for dataclasses
]

# TODO: cleanup — BLE001 (bare except Exception) is enforced via the
# scripts/ai_checks/check_unenforced_rules.sh allowlist gate for NEW code.
# These per-file ignores pin EXISTING violations so ruff stays usable until
# they are migrated to specific exceptions or annotated with
# `# noqa: BLE001 — <reason>`.
[tool.ruff.lint.per-file-ignores]
"api/routers/forecasting/backtest_management.py" = ["BLE001"]
"api/routers/forecasting/champion_experiments.py" = ["BLE001"]
"api/routers/forecasting/cluster_experiments.py" = ["BLE001"]
"api/routers/forecasting/production_forecast.py" = ["BLE001"]
"api/routers/inventory/inv_planning_policy.py" = ["BLE001"]
"api/routers/inventory/inv_planning_simulation.py" = ["BLE001"]
"common/ai/ai_planner.py" = ["BLE001"]
"common/ai/tuning_advisor.py" = ["BLE001"]
"common/auth.py" = ["BLE001"]
"common/core/utils.py" = ["BLE001"]
"common/engines/exception_engine.py" = ["BLE001"]
"common/engines/sop_decisions.py" = ["BLE001"]
"common/ml/backtest_framework.py" = ["BLE001"]
"common/ml/clustering/scenario.py" = ["BLE001"]
"common/ml/mlflow_utils.py" = ["BLE001"]
"common/ml/shap_selector.py" = ["BLE001"]
"common/ml/tuning.py" = ["BLE001"]
"common/services/cache.py" = ["BLE001"]
"common/services/job_registry.py" = ["BLE001"]
"common/services/job_state.py" = ["BLE001"]
"common/services/notification_engine.py" = ["BLE001"]
"common/services/perf_profiler.py" = ["BLE001"]
"common/services/query_tracker.py" = ["BLE001"]
"common/services/webhook_dispatcher.py" = ["BLE001"]
"common/ml/expert_panel/**" = ["BLE001"]
"scripts/**" = ["BLE001"]
"tests/**" = ["BLE001"]

[tool.ruff.lint.isort]
known-first-party = ["api", "common", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
exclude = ["data/", "archive/", ".venv/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Scale / load tests live in tests/scale/ and require a real Postgres + are
# slow. They are excluded from the default `pytest tests/` run via the
# `-m "not scale"` marker filter and via `norecursedirs` so collection never
# even imports their conftest. Run them with `make scale-test` (which passes
# the explicit path `tests/scale/` to pytest, bypassing both gates).
addopts = "-m 'not scale'"
markers = [
  "scale: scale/load tests; excluded from default run (see tests/scale/README.md)",
  "integration: tests that require a live Postgres + applied migrations; skipped by default unless an env flag enables them (see test docstring).",
]
norecursedirs = ["tests/scale"]
filterwarnings = ["ignore::DeprecationWarning"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["api", "common"]
omit = ["*/tests/*", "*/data/*", "*/archive/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__",
  "if TYPE_CHECKING",
]
