[project]
name = "demand-mvp"
version = "0.1.0"
description = "Unified demand MVP for multiple dimensions/facts"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary,pool]>=3.2.0",
  "python-dotenv>=1.0.1",
  "openai>=1.0.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "mlflow>=2.8.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pyyaml>=6.0.0",
  "lightgbm>=4.0.0",
  "catboost>=1.2.0",
  "xgboost>=2.0.0",
  "python-dateutil>=2.8.0",
  "prophet>=1.1.5",
  "torch>=2.0.0",
  "statsforecast>=2.0.0",
  "neuralprophet>=0.9.0",
  "plotly>=6.5.2",
  "apscheduler>=3.10",
  "optuna>=3.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
]
